<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <groupId>pl.mendroch.uj</groupId>
   <artifactId>turing-machine</artifactId>
   <version>1.0</version>

   <dependencies>
      <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>1.16.14</version>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>org.controlsfx</groupId>
         <artifactId>controlsfx</artifactId>
         <version>8.40.12</version>
      </dependency>
      <dependency>
         <groupId>io.datafx</groupId>
         <artifactId>flow</artifactId>
         <version>8.0</version>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.5.1</version>
            <configuration>
               <source>1.8</source>
               <target>1.8</target>
            </configuration>
         </plugin>
         <plugin>
            <artifactId>maven-shade-plugin</artifactId>
            <version>2.4.3</version>
            <executions>
               <execution>
                  <phase>package</phase>
                  <goals>
                     <goal>shade</goal>
                  </goals>
               </execution>
            </executions>
            <configuration>
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>shaded</shadedClassifierName>
               <transformers>
                  <transformer
                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                     <mainClass>pl.mendroch.uj.turing.Main</mainClass>
                  </transformer>
               </transformers>
            </configuration>
         </plugin>
         <plugin>
            <groupId>com.akathist.maven.plugins.launch4j</groupId>
            <artifactId>launch4j-maven-plugin</artifactId>
            <version>1.7.15</version>
            <executions>
               <execution>
                  <id>l4j-clui</id>
                  <phase>package</phase>
                  <goals>
                     <goal>launch4j</goal>
                  </goals>
                  <configuration>
                     <icon>src/main/resources/pl/mendroch/uj/turing/icon.ico</icon>
                     <headerType>console</headerType>
                     <outfile>target/Turing Machine.exe</outfile>
                     <jar>target/turing-machine-1.0-shaded.jar</jar>
                     <errTitle>Turing Machine</errTitle>
                     <classPath>
                        <mainClass>pl.mendroch.uj.turing.Main</mainClass>
                        <addDependencies>false</addDependencies>
                        <preCp>anything</preCp>
                     </classPath>
                     <jre>
                        <minVersion>1.8.0</minVersion>
                        <opts>
                           <opt>-Djava.endorsed.dirs=./endorsed</opt>
                        </opts>
                     </jre>
                     <versionInfo>
                        <fileVersion>1.2.3.4</fileVersion>
                        <txtFileVersion>txt file version?</txtFileVersion>
                        <fileDescription>a description</fileDescription>
                        <copyright>my copyright</copyright>
                        <productVersion>4.3.2.1</productVersion>
                        <txtProductVersion>txt product version</txtProductVersion>
                        <productName>Turing Machine</productName>
                        <internalName>turing</internalName>
                        <originalFilename>Turing Machine.exe</originalFilename>
                     </versionInfo>
                  </configuration>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>
</project>